src/App.css
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto+Mono&display=swap");

:root {
  --primary-color: #0a192f;
  --secondary-color: #64ffda;
  --secondary-color-text: #ccd6f6;
  --tertiary-color-text: #8892b0;
  --modal-color: #112240;
  --section-separator: #233554;
  --navy-shadow: rgba(2, 12, 27, 0.7);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}

body {
  background-color: var(--primary-color);
}

::-webkit-scrollbar {
  width: 0.5em;
}

::-webkit-scrollbar-track {
  background: #0a192f;
  margin: 5px;
}

::-webkit-scrollbar-thumb {
  background: #8892b0;
  border-radius: 100vw;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #757e97;
}

